--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "jpush/jpush": "^3.6",
         "laravel/framework": "^6.2",
         "laravel/horizon": "~3.1",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
         "mews/captcha": "~3.0",
         "mews/purifier": "~3.0",
